# dumps-or-fire

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  flake.nix  fly.toml  manage.py  pyproject.toml  requirements.txt  shell.nix
DumpsOrFire/DumpsOrFire/: settings.py
DumpsOrFire/spotify/: format_rating.py  generate_rating.py  url_parser.py  urls.py  views.py
DumpsOrFire/spotify/static/spotify/: descriptions.json  style2.css
DumpsOrFire/spotify/templates/spotify/: index.html  rate.html
DumpsOrFire/staticfiles/spotify/: descriptions.json  style.css
dumps_or_fire/: asgi.py  settings.py
dumps_or_fire/dumps_or_fire/: settings.py  wsgi.py
dumps_or_fire/spotify/: format_rating.py  generate_rating.py  views.py
dumps_or_fire/spotify/templates/spotify/: index.html
spotify/: format_rating.py  generate_rating.py  url_parser.py  views.py
spotify/static/spotify/: style.css
spotify/templates/spotify/: base.html  index.html  rate.html
