[project]
name = "dumps-or-fire"
version = "1.1.0"
description = "Music Popularity Getter Website"
authors = [
    { name = "Joshua Holman", email = "jolman@duck.com" },
    { name = "Brandon Cobb" },
    { name = "Jarred Siriban" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django",
    "logger",
    "python-dotenv",
    "requests",
    "social-auth-app-django",
]

[project.urls]
Homepage = "https://github.com/thejolman/dumps-or-fire"

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "mypy",
    "types-requests",
    "django-stubs",
]
