[project]
name = "dumps-or-fire"
version = "1.1.0"
description = "Music Popularity Getter Website"
authors = [
    { name = "Joshua Holman", email = "jolman@duck.com" },
    { name = "Brandon Cobb" },
    { name = "Jarred Siriban" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django",
    "logging>=0.4.9.6",
    "python-dotenv",
    "requests",
    "social-auth-app-django",
    "whitenoise>=6.8.2",
]

[project.urls]
Homepage = "https://github.com/thejolman/dumps-or-fire"

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "mypy",
    "types-requests",
    "django-stubs",
]

[tool.djlint]
exclude = ".venv"
indent = 2
files = ["spotify/static/spotify/style.css", "spotify/static/spotify/templates/spotify/"]
format_css = true
indent_size = 2
format_js = true

[tool.djlint.js]
indent_size=5
